# merlin_macros

./: CONTRIBUTING.MD  Cargo.toml  README.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust-security.yml
docs/: README.md
scripts/: build_github_docs.sh  build_rust_docs.sh
src/: lib.rs
